Security & Access Rights Auditor/main/default/objects/Field_Notation_obj__c/fields/FN_Field__c.field-meta.xml
<CustomField>
    <fullName>FN_Field__c</fullName>
    <label>FN Field</label>
    <type>TextArea</type>
</CustomField>