Security & Access Rights Auditor/main/default/objects/Field_Notation_obj__c/fields/Selected_Object__c.field-meta.xml
<CustomField>
    <fullName>Selected_Object__c</fullName>
    <label>Selected Object</label>
    <type>TextArea</type>
</CustomField>