Security & Access Rights Auditor/main/default/objects/Field_Notation_obj__c/fields/Text_Notation__c.field-meta.xml
<CustomField>
    <fullName>Text_Notation__c</fullName>
    <label>Text Notation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>